se corrigio un estilo de la pantalla cuando esta apagada

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -84,7 +84,7 @@ body{
 }
 .apagada{
   background-color:#a4b2b3;
-  color: #9aabac;
+  color: #a4b2b3;
 }
 .calculadora__cuerpo{
   background-color: #2B3336;
